# txt_quiz

./: .bash_cmake  .clang-format  .gitignore  CMakeLists.txt  Doxyfile
doc/doxygen/: Doxyfile.in
main/: .gitignore  CMakeLists.txt  cc_init.cc  cc_init.h  quiz_txt.cc  quiz_txt.h  read_esd_file.cc  read_esd_file.h  utf8_u16string.cc  utf8_u16string.h
test/: .gitignore  CMakeLists.txt
